# udm-pro-mcp

./: .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.json
src/udm_pro_mcp/: __init__.py  client.py  config.py  errors.py  models.py  server.py
src/udm_pro_mcp/tools/: __init__.py  clients.py  devices.py  monitoring.py  network.py  system.py
tests/: conftest.py  test_client.py  test_config.py  test_tools_clients.py  test_tools_devices.py  test_tools_monitoring.py  test_tools_network.py  test_tools_system.py
