[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udm-pro-mcp"
version = "0.1.0"
description = "MCP server for managing and monitoring a Ubiquiti UDM Pro"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "aioresponses>=0.7",
]

[project.scripts]
udm-pro-mcp = "udm_pro_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/udm_pro_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
